[package]
name = "tcp_jsonrpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "ljsonrpc_over_tcp"
path = "src/lib.rs"

[[bin]]
name = "jsonrpc_tool"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [ "full" ] }
tokio-util = "0.7.13"
